--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Web page #1!</title>
   </head>
   <body>
+    <div class="container-sm">
     <h1>My first web page</h1>
     <h2>Written with the guidance of <em>Epicodus</em></h2>
     <p>Check out <a href="http://www.epicodus.com">Epicodus</a>. It's a great school for learning web programming!</p>
@@ -25,5 +26,6 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+  </div>
   </body>
 </html>
