--- a/index.html
+++ b/index.html
@@ -5,27 +5,34 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js" ></script>
-    <title>Web page #1!</title>
+    <title>Erich's Favorite Things</title>
   </head>
   <body>
     <div class="container-sm">
-    <h1>My first web page</h1>
-    <h2>Written with the guidance of <em>Epicodus</em></h2>
-    <p>Check out <a href="http://www.epicodus.com">Epicodus</a>. It's a great school for learning web programming!</p>
-    <p>Here is a link to my <a href="favorite_things2.html">favorite things</a>.</p>
-    
-    <p>This is my <strong>first webpage!</strong></p>
-    <p>Isn't it nice?</p>
+    <h1>My favorite things</h1>
+    <h2>These are a few of my favorite things.</h2>
 
-    <img src="golden-retriever.jpg" alt="A photo of a golden retriever.">
-    
-    <p>Here are some things I'm going to learn about coding:</p>
+    <h3>People</h3>
+    <p>Here are some of my favorite people!</p>
     <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>And a lot more!</li>
+      <li>My wife Karly</li>
+      <li>My Dad and brother:
+        <ul>
+          <li>Joe</li>
+          <li>Karl</li>
+        </ul>
+      </li>
     </ul>
+
+    <h3>Favorite foods</h3>
+    <p>These are my three favorites, in order</p>
+    <ol>
+      <li>Pizza</li>
+      <li>Steak</li>
+      <li>Club sandwich</li>
+    </ol>
+    <p>Here is a link to my <a href="my-first-webpage2.html">first website</a>.</p>
+    <p>Thanks for reading about me!</p>
   </div>
   </body>
 </html>
